# clica-e-fala

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
scripts/: render_tray_icons.swift
src/: aura.html  index.html  review.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  aura.rs  config.rs  history.rs  logging.rs  main.rs  pipeline.rs  review.rs  sound.rs  tray.rs
