[package]
name = "clica-e-fala"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
anyhow = "1"
arboard = "3"
chrono = "0.4"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "NSScreen", "NSWindow", "NSResponder", "NSEvent", "NSColor"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSArray"] }
